--- a/lesson8_starter_code/[2] - select_fun/css/style.css
+++ b/lesson8_starter_code/[2] - select_fun/css/style.css
@@ -179,4 +179,6 @@ button {
    ================================================================ */
 .fun {
   /* Add your styles here! background-color and color for fonts (and other styles if you'd like!) */
+  background-color: purple;
+  color: white;
 }
