--- a/lesson8_starter_code/[3] - select_fun_part_2/css/style.css
+++ b/lesson8_starter_code/[3] - select_fun_part_2/css/style.css
@@ -115,3 +115,15 @@ footer {
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
+
+.purplenurple{
+     background-color: purple;
+}
+
+.spanny{
+     color: white;
+}
+
+.sunny{
+     color: yellow;
+}
